# low-latency-trading-pipeline

./: CMakeLists.txt  README.md  main.cpp
include/core/: event_format.hpp  ring_buffer.hpp
include/decoders/: nasdaq_itch_decoder.hpp
include/network/: dpdk_receiver.hpp  feed_handler_engine.hpp
scripts/: bind_nic.sh  cleanup_hugepages.sh  setup_hugepages.sh  unbind_nic.sh
